[package]
name = "egui_oszi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"

eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
egui_plot = "0.27.2"

puffin = { version = "0.19.0", optional = true }
puffin_egui = { version = "0.26.0", optional = true }

[features]
profiling = ["dep:puffin", "dep:puffin_egui"]
