[package]
name = "egui_oszi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"

eframe = { version = "0.27.2", default-features = false, features = ["glow", "x11", "wayland"] }
egui = { version = "0.27.2", default-features = false }
egui_extras = { version = "0.27.2", default-features = false }
egui_plot = { version = "0.27.2", default-features = false }

puffin = { version = "0.19.0", optional = true }
puffin_egui = { version = "0.26.0", optional = true }

[features]
profiling = ["dep:puffin", "dep:puffin_egui"]
